# Op.

./: .gitignore  Pipfile  Procfile  README.md  Todo  curl-commands.txt  package-lock.json  package.json  procfile  pyproject.toml  requirements.txt  webpack.config.js
op/: manage.py
op/authentication/: models.py  serializers.py  urls.py  views.py
op/authentication/migrations/: 0002_customuser_projects.py  0003_remove_customuser_projects.py
op/frontend/: urls.py
op/frontend/src/: index.js  store.js
op/frontend/src/actions/: action_types.js  auth.js  axiosApi.js  axios_api.js  d_mode.js  drafts.js  modal.js  ops.js  select_op.js  types.js
op/frontend/src/components/: App.js  hello.js  login.js
op/frontend/src/reducers/: auth_reducer.js  dmode_reducer.js  draft_reducer.js  op_modal_reducer.js  ops_reducer.js  root_reducer.js  select_op_reducer.js  session_reducer.js
op/frontend/src/util/: route_util.js
op/frontend/static/frontend/: style.css
op/frontend/templates/frontend/: index.html
op/op/: api.py  settings.py  urls.py  wsgi.py
op/ops/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
op/ops/migrations/: 0001_initial.py  0002_auto_20200407_2142.py  0003_draft_version_num.py  0004_auto_20200501_2251.py  0005_remove_draft_medium.py  0006_auto_20200510_2237.py  0007_auto_20200510_2240.py  0008_auto_20200513_0510.py  0009_auto_20200515_1751.py  0010_auto_20201129_1915.py  0011_auto_20201129_2025.py  0012_auto_20201129_2040.py
op/staticfiles/: staticfiles.json
op/staticfiles/frontend/public/: main.193aba650f17.js  main.a36a114c00de.js  main.ccbcaece0134.js  main.js  (+1 more)
op2/tests/: test_op2.py
(+57 files in other folders)
