[tool.poetry]
name = "op2"
version = "0.1.0"
description = ""
authors = ["Max Koiwai <maxjacobkoiwai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
django = "^3.0.14"
djangorestframework = "^3.11.0"
djangorestframework_simplejwt = "^4.4.0"
psycopg2 = "^2.8.4"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
django-filter = "^2.4.0"
psycopg2_binary = "^2.8.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.14.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
